welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: ':' expected but identifier found.
def peindreSol(Color c) {
                     ^PatternPicture:26: error: identifier expected but '}' found.
}
^