welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def peindreSol(Color c) {
  changeCouleurBrosse(c)
  
  // On marque le sol.
  baisseBrosse()
  leveBrosse()
}

def dessineCarre() {
  // Zone rouge.
  avance()
  peindreSol(Color.YELLOW)
  
  gauche()
  avance()
  gauche()
  avance()
  peindreSol(Color.YELLOW)
}

override def run() {
  dessineCarre()
}
